# turbostage

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  turbostage.spec
.github/workflows/: linux.yml  macos.yml  python_package.yml  unit_tests.yml  windows.yml  windows_package.yml
conf/: dosbox-staging.conf
db/: populate_db.py
test/: test_game_database.py  test_igdb.py  test_iso_utils.py  test_utils.py
turbostage/: __init__.py  add_game_worker.py  add_new_game_dialog.py  clickable_line_edit.py  configure_game_dialog.py  constants.py  dosbox_runner.py  download_dialog.py  fetch_game_info_thread.py  game_database.py  game_info_widget.py  game_launcher.py  game_setup_dialog.py  game_setup_widget.py  igdb.py  igdb_client.py  iso_utils.py  main.py  main_window.py  scanning_thread.py  settings_dialog.py  turbostage.py  utils.py
turbostage/conf/: dosbox-staging.conf
turbostage/content/: __init__.py  sample_games.json
turbostage/db/: constants.py  database_manager.py  game_database.py  migrations.py  populate_db.py  remote_db.py
turbostage/ui/: add_new_game_dialog.py  clickable_line_edit.py  configure_game_dialog.py  download_dialog.py  game_info_widget.py  game_setup_dialog.py  game_setup_widget.py  locked_file_dialog.py  main_window.py  new_game_wizard.py  settings_dialog.py  submit_config_dialog.py
