[tool.poetry]
name = "turbostage"
description = "A DosBox Staging Frontend"
authors = ["Jerome"]
license = "Apache 2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
version = "0.4.0"  # Placeholder

include = [
    "content/splash.jpg"
]

[tool.poetry.dependencies]
python = "^3.11"
pyside6 = "==6.8.1"
requests = "==2.32.3"
igdb-api-v4 = "==0.3.3"

[tool.poetry.scripts]
turbostage = "turbostage.main:main"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
